<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>se.hirt.examples</groupId>
	<artifactId>svc-perfcounters</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>PerfCounters</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>se.hirt.examples</groupId>
			<artifactId>svc-attach</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<finalName>svc-attach</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-java</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<level>ERROR</level>
									<version>9</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports=java.base/jdk.internal.perf=ALL-UNNAMED</arg>
						<arg>--add-exports=java.management/sun.management.counter=ALL-UNNAMED</arg>
						<arg>--add-exports=java.management/sun.management.counter.perf=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<assembleDirectory>target</assembleDirectory>
					<extraJvmArguments>--add-exports=java.base/jdk.internal.perf=ALL-UNNAMED
						--add-exports=java.management/sun.management.counter=ALL-UNNAMED
						--add-exports=java.management/sun.management.counter.perf=ALL-UNNAMED</extraJvmArguments>
					<programs>
						<program>
							<mainClass>se.hirt.examples.svc.perfcounters.ListCounters</mainClass>
							<id>listCounters</id>
						</program>
						<program>
							<mainClass>se.hirt.examples.svc.perfcounters.jmx.CounterMBeanExample</mainClass>
							<id>runCounterMBeanExample</id>
						</program>
					</programs>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
